--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>digital-clock</title>
   </head>
   <body>
     <div class="clock">
+      <div class="clock-heading">Digital Clock</div>
       <div>
         <span id="hours">00</span>
         <span class="text">Hours</span>
@@ -24,5 +26,6 @@
         <span id="ampm">AM</span>
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
